# BSUIR

./: README.md
2-ALFoDD/Coursework/: README.md
2-ALFoDD/Coursework/report/: bib.tex  bibliography.bib  conclusion.tex  contents.tex  course.tex  introduction.tex  preamble.tex  task1.tex  task2.tex  task3.tex  task4.tex  task5.tex  title.tex
2-ALFoDD/Individual/: README.md
2-ALFoDD/Individual/abstract/: antiplagiat.tex  bibliography.bib  conclusion.tex  contents.tex  introduction.tex  preamble.tex  report.tex  section1.tex  section2.tex  section3.tex  section4.tex  title.tex  toc.tex
3-PiHLL/Common/: CMakeLists.txt  README.md
3-PiHLL/Common/L1/: main.cpp
3-PiHLL/Common/L2/T1/: main.cpp
3-PiHLL/Common/L2/T2/: main.cpp  my_string.cpp  my_string.h  test.cpp
3-PiHLL/Common/L3/: car.cpp  car.h  main.cpp
3-PiHLL/Common/L4/: list.h  main.cpp  test.cpp
3-PiHLL/Common/L5/: exception.cpp  exception.h  main.cpp
3-PiHLL/Common/L6/: main.cpp
3-PiHLL/Common/L6/Datagrams/: History.cpp  History.h  Message.cpp  Message.h
3-PiHLL/Common/L6/System/: Binary.cpp  Binary.h  File.cpp  File.h  Text.cpp  Text.h
3-PiHLL/Common/L7/: algorithms.h  main.cpp
3-PiHLL/Common/L8/: main.cpp
3-PiHLL/Coursework/: README.md
3-PiHLL/Coursework/demo/: 01 Greeting.txt  02 Ping-pong.txt  03 A+B.txt  04 Compare.txt  05 Counter.txt  06 Guessing.txt  07 Tic-tac-toe.txt
3-PiHLL/Coursework/report/: bibliography.bib  gost780u.bst  (+4 more)
3-PiHLL/Coursework/src/: CMakeLists.txt  Constexpr.cpp  Constexpr.h  Convert.cpp  Convert.h  Core.cpp  Core.h  Error.cpp  Error.h  Evaluator.cpp  Evaluator.h  Expression.cpp  Expression.h  Interpreter.cpp  Interpreter.h  Lexeme.cpp  Lexeme.h  Lexer.cpp  Lexer.h  Monitor.cpp  Monitor.h  Parser.cpp  Parser.h  Registry.cpp  Registry.h  Source.cpp  Source.h  Statement.cpp  Statement.h  Value.cpp  Value.h  main.cpp
3-PiHLL/Exam-answers/: README.md
4-OSaSP/Common/: README.md
4-OSaSP/Coursework/: README.md
4-PCA/Common/: .gitignore  README.md
4-PiHLL/Common/: README.md  Statements.md  pom.xml
5-FP/: .gitignore
5-FP/Common/: build.sbt
5-FoCN/Common/: README.md
5-FoCN/Exam-answers/: README.md
5-IaDoC/Common/Win1X/: CMakeLists.txt  vcpkg.json
5-IaDoC/Common/Win1X/L1/: BatteryInfo.cpp  BatteryInfo.h  PowerInfo.cpp  PowerInfo.h  System.cpp  System.h  main.cpp
5-IaDoC/Common/Win1X/L4/: main.cpp
5-IaDoC/Common/Win1X/L5/: Device.cpp  Device.h  main.cpp
5-IaDoC/Common/Win1X/L6/: main.cpp
5-SDLC/Common/: README.md
6-AoCN/: README.md
6-AoCN/L2/: pt-net-topology.pkt
6-AoCN/L3/: pt-net-topology-route.pkt
6-AoCN/L4/: pt-net-topology-dhcp-nat.pkt
6-AoCN/L5/: ipv6-gns-topology.gns3
6-DB/L1/: er-diagram.drawio
6-DB/L2/: uml-scheme.drawio
6-DB/L3/: db-scheme.drawio  uml-scheme.drawio
6-DB/L4/: queries.sql
6-DB/L5/: queries.sql
6-DB/L6/crud-rs/: Cargo.toml  Rocket.toml
6-DB/L6/crud-rs/migrations/2024-04-18-191601_create_schema/: down.sql  up.sql
6-DB/L6/crud-rs/src/: lib.rs  main.rs  schema.rs
6-DB/L6/crud-rs/src/models/: apartment.rs  apartment_reservation.rs  apartment_type.rs  company_identity.rs  customer.rs  guest.rs  individual_identity.rs  mod.rs  service.rs  service_order.rs
6-DB/L6/crud-rs/src/routes/: apartment.rs  apartment_reservation.rs  apartment_type.rs  company_identity.rs  customer.rs  guest.rs  individual_identity.rs  mod.rs  service.rs  service_order.rs
6-SA/: README.md
6-SA/L1/: Workbench.ods
6-SA/L2/: L2.ahp  Workbench.ods
6-SA/L3/: Cond1.ahp  Cond2.ahp  Cond3.ahp  Workbench.ods
6-SA/L4/: Workbench.ods
(+281 files in other folders)
