[package]
name = "crud-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.5", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
dotenvy = "0.15.7"
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["diesel_postgres"] }
serde = { version = "1.0.198", features = ["derive"] }
